@@ -27,6 +27,7 @@ import static android.app.Notification.EXTRA_TEXT;
 import static android.app.Notification.EXTRA_TEXT_LINES;
 import static android.app.Notification.EXTRA_TITLE;
 import static android.app.Notification.EXTRA_TITLE_BIG;
+import static android.os.Build.VERSION.SDK_INT;
 import static android.view.textclassifier.TextClassifier.TYPE_ADDRESS;
 import static android.view.textclassifier.TextClassifier.TYPE_FLIGHT_NUMBER;
 import static android.view.textclassifier.TextClassifier.TYPE_PHONE;
@@ -37,40 +38,42 @@ import android.app.Notification;
 import android.app.Notification.MessagingStyle;
 import android.app.Notification.MessagingStyle.Message;
 import android.icu.util.ULocale;
+import android.os.Build;
 import android.os.Bundle;
 import android.os.Parcelable;
-import android.service.notification.Flags;
 import android.util.ArrayMap;
 import android.view.textclassifier.TextClassifier;
 import android.view.textclassifier.TextLanguage;
 import android.view.textclassifier.TextLinks;
 
-import com.android.modules.utils.build.SdkLevel;
+import androidx.annotation.VisibleForTesting;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 /**
- * Class with helper methods related to detecting OTP codes in notifications
+ * Class with helper methods related to detecting OTP codes in notifications.
+ * This file needs to only use public android API methods, see b/361149088
  */
 public class NotificationOtpDetectionHelper {
 
     // Use an ArrayList because a List.of list will throw NPE when calling "contains(null)"
     private static final List<String> SENSITIVE_NOTIFICATION_CATEGORIES = new ArrayList<>(
-            List.of(CATEGORY_MESSAGE, CATEGORY_EMAIL, CATEGORY_SOCIAL));
+            Arrays.asList(CATEGORY_MESSAGE, CATEGORY_EMAIL, CATEGORY_SOCIAL));
 
     private static final List<Class<? extends Notification.Style>> SENSITIVE_STYLES =
-            new ArrayList<>(List.of(Notification.MessagingStyle.class,
+            new ArrayList<>(Arrays.asList(Notification.MessagingStyle.class,
                     Notification.InboxStyle.class, Notification.BigTextStyle.class));
 
     private static final List<Class<? extends Notification.Style>> EXCLUDED_STYLES =
-            new ArrayList<>(List.of(Notification.MediaStyle.class,
+            new ArrayList<>(Arrays.asList(Notification.MediaStyle.class,
                     Notification.BigPictureStyle.class));
     static {
-        if (SdkLevel.isAtLeastS()) {
+        if (SDK_INT >= Build.VERSION_CODES.S) {
             EXCLUDED_STYLES.add(Notification.CallStyle.class);
         }
     }
@@ -232,6 +235,10 @@ public class NotificationOtpDetectionHelper {
                 createDictionaryRegex(ENGLISH_CONTEXT_WORDS)));
     }
 
+    private static boolean isAtLeastV() {
+        return SDK_INT >= Build.VERSION_CODES.VANILLA_ICE_CREAM;
+    }
+
     /**
      * Checks if the sensitive parts of a notification might contain an OTP, based on several
      * regular expressions, and potentially using a textClassifier to eliminate false positives
@@ -251,7 +258,7 @@ public class NotificationOtpDetectionHelper {
      */
     public static boolean containsOtp(Notification notification,
             boolean checkForFalsePositives, TextClassifier tc) {
-        if (notification == null || !SdkLevel.isAtLeastV()) {
+        if (notification == null || !isAtLeastV()) {
             return false;
         }
 
@@ -353,8 +360,8 @@ public class NotificationOtpDetectionHelper {
     private static boolean hasFalsePositivesTcCheck(String text, TextClassifier tc) {
         // Use TC to eliminate false positives from a regex match, namely: flight codes, and
         // addresses
-        List<String> included = new ArrayList<>(List.of(TYPE_FLIGHT_NUMBER, TYPE_ADDRESS));
-        List<String> excluded = new ArrayList<>(List.of(TYPE_PHONE));
+        List<String> included = new ArrayList<>(Arrays.asList(TYPE_FLIGHT_NUMBER, TYPE_ADDRESS));
+        List<String> excluded = new ArrayList<>(Arrays.asList(TYPE_PHONE));
         TextClassifier.EntityConfig config =
                 new TextClassifier.EntityConfig.Builder().setIncludedTypes(
                         included).setExcludedTypes(excluded).build();
@@ -376,9 +383,9 @@ public class NotificationOtpDetectionHelper {
      * @param notification The notification whose content should be filtered
      * @return The extracted text fields
      */
-    public static String getTextForDetection(Notification notification) {
-        if (notification.extras == null || !SdkLevel.isAtLeastV()
-                || !Flags.redactSensitiveNotificationsFromUntrustedListeners()) {
+    @VisibleForTesting
+    protected static String getTextForDetection(Notification notification) {
+        if (notification.extras == null || !isAtLeastV()) {
             return "";
         }
         Bundle extras = notification.extras;
@@ -389,14 +396,12 @@ public class NotificationOtpDetectionHelper {
                 .append(title != null ? title : "").append(" ")
                 .append(text != null ? text : "").append(" ")
                 .append(subText != null ? subText : "").append(" ");
-        if (Flags.redactSensitiveNotificationsBigTextStyle()) {
-            CharSequence bigText = extras.getCharSequence(EXTRA_BIG_TEXT);
-            CharSequence bigTitleText = extras.getCharSequence(EXTRA_TITLE_BIG);
-            CharSequence summaryText = extras.getCharSequence(EXTRA_SUMMARY_TEXT);
-            builder.append(bigText != null ? bigText : "").append(" ")
-                    .append(bigTitleText != null ? bigTitleText : "").append(" ")
-                    .append(summaryText != null ? summaryText : "").append(" ");
-        }
+        CharSequence bigText = extras.getCharSequence(EXTRA_BIG_TEXT);
+        CharSequence bigTitleText = extras.getCharSequence(EXTRA_TITLE_BIG);
+        CharSequence summaryText = extras.getCharSequence(EXTRA_SUMMARY_TEXT);
+        builder.append(bigText != null ? bigText : "").append(" ")
+                .append(bigTitleText != null ? bigTitleText : "").append(" ")
+                .append(summaryText != null ? summaryText : "").append(" ");
         CharSequence[] textLines = extras.getCharSequenceArray(EXTRA_TEXT_LINES);
         if (textLines != null) {
             for (CharSequence line : textLines) {
@@ -422,8 +427,7 @@ public class NotificationOtpDetectionHelper {
      * @return true, if further checks for OTP codes should be performed, false otherwise
      */
     public static boolean shouldCheckForOtp(Notification notification) {
-        if (notification == null || !SdkLevel.isAtLeastV()
-                || !Flags.redactSensitiveNotificationsFromUntrustedListeners()
+        if (notification == null || !isAtLeastV()
                 || EXCLUDED_STYLES.stream().anyMatch(s -> isStyle(notification, s))) {
             return false;
         }
